<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_book_list"
        android:title="@string/title_book_list"
        android:icon="@drawable/baseline_list_white_24dp"/>

    <item
        android:id="@+id/navigation_favourites_list"
        android:title="@string/title_favorites_list"
        android:icon="@drawable/baseline_bookmark_white_24dp"/>

    <item
        android:id="@+id/navigation_image_favourites_list"
        android:title="@string/title_image_favourites_list"
        android:icon="@drawable/baseline_dirty_lens_white_24dp"/>

    <item
        android:id="@+id/navigation_description_list"
        android:title="@string/description_list"
        android:icon="@drawable/baseline_batch_prediction_black_24dp"/>


</menu>