<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/text_1"
        android:layout_width="200dp"
        android:layout_height="35dp"
        android:layout_margin="0dp"
        android:text="@string/title_favorites_list"
        android:textColor="#4E4C4C"
        android:textSize="25sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#3A3939"
        android:translationX="0dp"
        android:translationY="35dp"/>

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:scaleType="centerInside"
        android:translationX="10dp"
        android:translationY="40dp"
        android:src ="@drawable/kleimo"
        android:contentDescription="@string/todo" />

    <TextView
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:layout_margin="35dp"
        android:fontFamily="sans-serif"
        android:text="@string/text_kleimo"
        android:textColor="#646868"
        android:textSize="25sp"
        android:translationX="80dp"
        android:translationY="10dp" />

    <TextView
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:layout_margin="35dp"
        android:fontFamily="sans-serif-thin"
        android:text="@string/text_author"
        android:textColor="#434550"
        android:textSize="25sp"
        android:translationX="80dp"
        android:translationY="60dp" />


</FrameLayout>